# bda

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  db.sqlite3  db.sqlite3.backup  fabfile.py  old-requirements.txt  pyproject.toml  requirements.txt
BDA/: urls.py  wsgi.py
areas/: admin.py  forms.py  models.py  serializers.py  svg.py  tests.py  utils.py  views.py
areas/migrations/: 0001_initial.py  0002_auto_20170218_0816.py  0003_bioentry_description.py  0004_auto_20170218_1342.py  0005_auto_20170218_1348.py  0006_auto_20170218_1642.py  0007_auto_20170221_1809.py  0008_areabio_created.py  0009_auto_20170320_1054.py  0010_auto_20170417_1058.py  0011_areabio_mailed_to.py  0012_auto_20170511_1944.py  0013_auto_20170513_0043.py  0014_auto_20170513_0122.py  0015_auto_20170513_0136.py  0016_bioentry_housing_metadata.py  0017_alter_areabio_id_alter_bioentry_id.py  0018_areabio_user.py  0019_alter_bioentry_options_alter_areabio_age_and_more.py  0020_alter_areabio_created.py  0021_remove_areabio_mailed_to_remove_areabio_published.py  0022_areabio_birth_year.py  0023_alter_areabio_options.py
assets/css/: admin.css
assets/js/: area_list.js  detail.js  done.js  superagent-jsonapify.js  timer.js
assets/sass/: styles.sass
bda/: urls.py
settings/: andy.py  bda.yml  common.py
templates/: area_bio.html  area_list.pug  detail.pug  done.pug  graph.pug  index.html  index.pug  login.pug  test.pug  view.pug
templates/admin/: base_site.html
templates/messages/: send_graph.txt
templates/partials/: bare_graph.pug  full_graph.pug  naked_graph.pug  (+1 more)
(+4 files in other folders)
