[project]
name = "bda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = ["django (>=6.0.1,<7.0.0)", "pypugjs (>=6.0.1,<7.0.0)", "django-compressor (>=4.6.0,<5.0.0)", "django-extensions (>=4.1,<5.0)", "django-countries (>=8.2.0,<9.0.0)", "django-rest-framework (>=0.1.0,<0.2.0)", "pre-commit (>=4.5.1,<5.0.0)", "drf-nested-routers (>=0.95.0,<0.96.0)", "dj-static (>=0.0.6,<0.0.7)", "django-livereload-server (>=0.5.1,<0.6.0)", "django-libsass (>=0.9,<0.10)", "uwsgi (>=2.0.31,<3.0.0)"]
